delete form  due to non-responsiveness
as it was not responsive

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Portfolio Website</title>
+    <title>Divyanshi </title>
     <link rel="stylesheet" href="portfolio.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
@@ -107,9 +107,9 @@
                 </div>
             </div>
           </section>
-          <div class="contact" id="contact">
-              <h2 class="heading1">Contact<span> Me</span></h2>
-              <br>
+          <!-- <div class="contact" id="contact">
+              <h2 class="heading1">Contact<span> Me</span></h2> -->
+              <!-- <br>
               <form action="">
                 <div class="input-group">
                     <div class="input-box">
@@ -126,8 +126,8 @@
                         <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
                                  <input type="submit" val="Send Message" class="btn">
                     </div>
-              </form>
-            </div> 
+               </form> -->
+            <!-- </div>   -->
               <footer class="footer">
                 <div class="social">
                     <a href="https://www.linkedin.com/in/divyanshi-jadon-a11923315" target="_blank"><i class="bx bxl-linkedin"></i></a>
