changes due to non-responsive part
some of the parts in my code were non-respomsive

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 
                 </div>
 
-                <div class="btn-group">
+                <!-- <div class="btn-group">
                     <a href="#" class="btn">Hire</a>
                     <a href="#contact" class="btn">Contact</a>
                 </div>
-            </div>
+            </div> -->
             <div class="home-img">
                 <img src="image.jpg" alt="">
             </div>
@@ -67,7 +67,7 @@
                 <div class="timeline-dot"></div> 
                     <div class="timeline-date">2023</div>
                     <div class="timeline-content">
-                <h3>Higher Secondary Education  </h3>
+                <h3>Intermediate </h3>
                 <p>
                     I completed my Higher Secondary Education at Indira Memorial Senior Secondary School ,Sirsaganj
                     in 2023, specializing in the Science stream. During my time there, I developed a strong foundation in Physics, Chemistry, and Mathematics, achieving excellent grades .
@@ -87,20 +87,20 @@
           </div>
           </section>
         </section>
-          <section class="services" id="services">
-            <h2 class="heading">Services</h2>
+          <section class="skills" id="skills">
+            <h2 class="heading">Skills</h2>
             <br>
-            <div class="services-container">
-                <div class="services-box">
-                    <div class="services-info">
+            <div class="skills-container">
+                <div class="skills-box">
+                    <div class="skills-info">
                         <h4>Web Developer</h4>
                         <p>
                          Creating websites that look and work great on any device, from desktops to smartphones. Timely resolution of any issues that arise. Ensuring your website loads quickly and runs smoothly.
                         </p>
                     </div>
                 </div>
-                <div class="services-box">
-                    <div class="services-info">
+                <div class="skills-box">
+                    <div class="skills-info">
                         <h4>Frontend Development</h4>
                         <p>Crafting websites that automatically adjust to different screen sizes and resolutions, ensuring a seamless user experience on desktops, tablets, and smartphones.</p>
                     </div>
@@ -134,8 +134,8 @@
                     <a href="https://github.com/DivyanshiJadon" target="_blank"><i class="bx bxl-github"></i></a>
                 </div>
                  <ul class="list">
-                    <li><a href="#">FAQ</a> </li>
-                    <li>  <a href="#">Services</a></li>
+                    <!-- <li><a href="#">FAQ</a> </li>
+                    <li>  <a href="#">Services</a></li> -->
                     <li><a href="#">About Me</a> </li>
                     <li> <a href="#">Contact</a> </li>
                  </ul>
