--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
        <nav class="navbar">
         <a href="#home" class="active">Home</a>
         <a href="#education" >Education</a>
-        <a href="#services" >Services</a>
+        <a href="#skills" >Skills</a>
         <a href="#contact">Contact</a>
        </nav>
           </header>
