--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="#home" class="active">Home</a>
         <a href="#education" >Education</a>
         <a href="#skills" >Skills</a>
-        <a href="#contact">Contact</a>
+        <!-- <a href="#contact">Contact</a> -->
        </nav>
           </header>
           <section class ="home" id="home">
@@ -96,13 +96,14 @@
                         <h4>Web Developer</h4>
                         <p>
                          Creating websites that look and work great on any device, from desktops to smartphones. Timely resolution of any issues that arise. Ensuring your website loads quickly and runs smoothly.
+                         Technical skills as in Languages like HTML, CSS, JavaScript and if we talk about Version Control then Git, GitHub.
                         </p>
                     </div>
                 </div>
                 <div class="skills-box">
                     <div class="skills-info">
                         <h4>Frontend Development</h4>
-                        <p>Crafting websites that automatically adjust to different screen sizes and resolutions, ensuring a seamless user experience on desktops, tablets, and smartphones.</p>
+                        <p>Crafting websites that automatically adjust to different screen sizes and resolutions, ensuring a seamless user experience on desktops, tablets, and smartphones.I have  a good knoeledge of html,css,javascript and I'm eager to enhance my skills.</p>
                     </div>
                 </div>
             </div>
@@ -137,7 +138,7 @@
                     <!-- <li><a href="#">FAQ</a> </li>
                     <li>  <a href="#">Services</a></li> -->
                     <li><a href="#">About Me</a> </li>
-                    <li> <a href="#">Contact</a> </li>
+                    <!-- <li> <a href="#">Contact</a> </li> -->
                  </ul>
                  <p class="copyright">
                     @ Divyanshi | All Rights Reserved
