--- a/index.html
+++ b/index.html
@@ -96,14 +96,13 @@
                         <h4>Web Developer</h4>
                         <p>
                          Creating websites that look and work great on any device, from desktops to smartphones. Timely resolution of any issues that arise. Ensuring your website loads quickly and runs smoothly.
-                         Technical skills as in Languages like HTML, CSS, JavaScript and if we talk about Version Control then Git, GitHub.
                         </p>
                     </div>
                 </div>
                 <div class="skills-box">
                     <div class="skills-info">
                         <h4>Frontend Development</h4>
-                        <p>Crafting websites that automatically adjust to different screen sizes and resolutions, ensuring a seamless user experience on desktops, tablets, and smartphones.I have  a good knoeledge of html,css,javascript and I'm eager to enhance my skills.</p>
+                        <p>Crafting websites that automatically adjust to different screen sizes and resolutions, ensuring a seamless user experience on desktops, tablets, and smartphones.</p>
                     </div>
                 </div>
             </div>
