--- a/index.html
+++ b/index.html
@@ -107,9 +107,10 @@
                 </div>
             </div>
           </section>
-          <!-- <div class="contact" id="contact">
-              <h2 class="heading1">Contact<span> Me</span></h2> -->
-              <!-- <br>
+          <div class="contact" id="contact">
+              <h2 class="heading1">Contact<span> Me</span></h2> 
+              
+               <br>
               <form action="">
                 <div class="input-group">
                     <div class="input-box">
@@ -126,18 +127,18 @@
                         <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
                                  <input type="submit" val="Send Message" class="btn">
                     </div>
-               </form> -->
-            <!-- </div>   -->
+               </form> 
+            </div>  
               <footer class="footer">
                 <div class="social">
                     <a href="https://www.linkedin.com/in/divyanshi-jadon-a11923315" target="_blank"><i class="bx bxl-linkedin"></i></a>
                     <a href="https://github.com/DivyanshiJadon" target="_blank"><i class="bx bxl-github"></i></a>
                 </div>
                  <ul class="list">
-                    <!-- <li><a href="#">FAQ</a> </li>
-                    <li>  <a href="#">Services</a></li> -->
+                    <li><a href="#">FAQ</a> </li>
+                    <li>  <a href="#">Services</a></li>
                     <li><a href="#">About Me</a> </li>
-                    <!-- <li> <a href="#">Contact</a> </li> -->
+                    <li> <a href="#">Contact</a> </li>
                  </ul>
                  <p class="copyright">
                     @ Divyanshi | All Rights Reserved
