--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Divyanshi </title>
+    <title>Portfolio Website</title>
     <link rel="stylesheet" href="portfolio.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
@@ -15,8 +15,8 @@
        <nav class="navbar">
         <a href="#home" class="active">Home</a>
         <a href="#education" >Education</a>
-        <a href="#skills" >Skills</a>
-        <!-- <a href="#contact">Contact</a> -->
+        <a href="#services" >Services</a>
+        <a href="#contact">Contact</a>
        </nav>
           </header>
           <section class ="home" id="home">
@@ -39,8 +39,8 @@
                 <!-- <div class="btn-group">
                     <a href="#" class="btn">Hire</a>
                     <a href="#contact" class="btn">Contact</a>
-                </div>
-            </div> -->
+                </div> -->
+            </div>
             <div class="home-img">
                 <img src="image.jpg" alt="">
             </div>
@@ -67,7 +67,7 @@
                 <div class="timeline-dot"></div> 
                     <div class="timeline-date">2023</div>
                     <div class="timeline-content">
-                <h3>Intermediate </h3>
+                <h3>Higher Secondary Education  </h3>
                 <p>
                     I completed my Higher Secondary Education at Indira Memorial Senior Secondary School ,Sirsaganj
                     in 2023, specializing in the Science stream. During my time there, I developed a strong foundation in Physics, Chemistry, and Mathematics, achieving excellent grades .
@@ -87,20 +87,20 @@
           </div>
           </section>
         </section>
-          <section class="skills" id="skills">
-            <h2 class="heading">Skills</h2>
+          <section class="services" id="services">
+            <h2 class="heading">Services</h2>
             <br>
-            <div class="skills-container">
-                <div class="skills-box">
-                    <div class="skills-info">
+            <div class="services-container">
+                <div class="services-box">
+                    <div class="services-info">
                         <h4>Web Developer</h4>
                         <p>
                          Creating websites that look and work great on any device, from desktops to smartphones. Timely resolution of any issues that arise. Ensuring your website loads quickly and runs smoothly.
                         </p>
                     </div>
                 </div>
-                <div class="skills-box">
-                    <div class="skills-info">
+                <div class="services-box">
+                    <div class="services-info">
                         <h4>Frontend Development</h4>
                         <p>Crafting websites that automatically adjust to different screen sizes and resolutions, ensuring a seamless user experience on desktops, tablets, and smartphones.</p>
                     </div>
@@ -108,7 +108,8 @@
             </div>
           </section>
           <div class="contact" id="contact">
-              <h2 class="heading1">Contact<span> Me</span></h2> 
+              <h2 class="heading1">Contact<span> Me</span></h2>
+              <br>
               <form action="">
                 <div class="input-group">
                     <div class="input-box">
@@ -125,16 +126,16 @@
                         <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
                                  <input type="submit" val="Send Message" class="btn">
                     </div>
-               </form> 
-            </div>  
+              </form>
+            </div> 
               <footer class="footer">
                 <div class="social">
                     <a href="https://www.linkedin.com/in/divyanshi-jadon-a11923315" target="_blank"><i class="bx bxl-linkedin"></i></a>
                     <a href="https://github.com/DivyanshiJadon" target="_blank"><i class="bx bxl-github"></i></a>
                 </div>
                  <ul class="list">
-                    <li><a href="#">FAQ</a> </li>
-                    <li>  <a href="#">Services</a></li>
+                    <!-- <li><a href="#">FAQ</a> </li>
+                    <li>  <a href="#">Services</a></li> -->
                     <li><a href="#">About Me</a> </li>
                     <li> <a href="#">Contact</a> </li>
                  </ul>
