--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 
                 </div>
 
-                <div class="btn-group">
+                <!-- <div class="btn-group">
                     <a href="#" class="btn">Hire</a>
                     <a href="#contact" class="btn">Contact</a>
-                </div>
+                </div> -->
             </div>
-            <!-- <div class="home-img">
+            <div class="home-img">
                 <img src="image.jpg" alt="">
-            </div> -->
+            </div>
           </section>
 
           
