--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </div>
             </div>
           </section>
-          <div class="contact" id="contact">
+          <!-- <div class="contact" id="contact">
               <h2 class="heading1">Contact<span> Me</span></h2>
               <br>
               <form action="">
@@ -125,7 +125,7 @@
                        <div class="input-group-2">
                         <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
                                  <input type="submit" val="Send Message" class="btn">
-                    </div>
+                    </div> -->
               </form>
             </div> 
               <footer class="footer">
