--- a/index.html
+++ b/index.html
@@ -87,20 +87,20 @@
           </div>
           </section>
         </section>
-          <section class="services" id="services">
-            <h2 class="heading">Services</h2>
+          <section class="skills" id="skills">
+            <h2 class="heading">Skills</h2>
             <br>
-            <div class="services-container">
-                <div class="services-box">
-                    <div class="services-info">
+            <div class="skills-container">
+                <div class="skills-box">
+                    <div class="skills-info">
                         <h4>Web Developer</h4>
                         <p>
                          Creating websites that look and work great on any device, from desktops to smartphones. Timely resolution of any issues that arise. Ensuring your website loads quickly and runs smoothly.
                         </p>
                     </div>
                 </div>
-                <div class="services-box">
-                    <div class="services-info">
+                <div class="skills-box">
+                    <div class="skills-info">
                         <h4>Frontend Development</h4>
                         <p>Crafting websites that automatically adjust to different screen sizes and resolutions, ensuring a seamless user experience on desktops, tablets, and smartphones.</p>
                     </div>
