--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         <a href="#home" class="active">Home</a>
         <a href="#education" >Education</a>
         <a href="#skills" >Skills</a>
-        <a href="#contact">Contact</a>
        </nav>
           </header>
           <section class ="home" id="home">
@@ -137,7 +136,7 @@
                     <!-- <li><a href="#">FAQ</a> </li>
                     <li>  <a href="#">Services</a></li> -->
                     <li><a href="#">About Me</a> </li>
-                    <li> <a href="#">Contact</a> </li>
+                    <!-- <li> <a href="#">Contact</a> </li> -->
                  </ul>
                  <p class="copyright">
                     @ Divyanshi | All Rights Reserved
