--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
                     <div class="skills-info">
                         <h4>Web Developer</h4>
                         <p>
-                         Creating websites that look and work great on any device, from desktops to smartphones. Timely resolution of any issues that arise. Ensuring your website loads quickly and runs smoothly.
+                         Creating websites that look and work great on any device, from desktops to smartphones. Timely resolution of any issues that arise.
                         </p>
                     </div>
                 </div>
                 <div class="skills-box">
                     <div class="skills-info">
                         <h4>Frontend Development</h4>
-                        <p>Crafting websites that automatically adjust to different screen sizes and resolutions, ensuring a seamless user experience on desktops, tablets, and smartphones.</p>
+                        <p>Crafting websites that automatically adjust to different screen sizes and resolutions, ensuring a seamless user experience on desktops and smartphones.</p>
                     </div>
                 </div>
             </div>
