--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <div class="skills-box">
                     <div class="skills-info">
                         <h4>Frontend Development</h4>
-                        <p>Crafting websites that automatically adjust to different screen sizes and resolutions, ensuring a seamless user experience on desktops and smartphones.</p>
+                        <p>Crafting websites that automatically adjust to different screen sizes & resolutions, ensuring a seamless user experience on desktops & smartphones.</p>
                     </div>
                 </div>
             </div>
